# convert_beginning_whitespaces_rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
src/: lib.rs  main.rs
src/convert/: constants.rs  convert_base.rs  convert_beginning_spaces.rs  convert_beginning_tabs.rs  mod.rs
src/myargs/: mod.rs
