[package]
name = "convert_beginning_whitespaces_rust"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }

[[bin]]
edition = "2021"
name = "convert_beginning_whitespaces_rust"
path = "src/main.rs"
